Fixes for starmap ui
- disable plot itinerary button when selected system is current system
- fix shorthand ui not displaying on current system when selected
- fix selection cursor overlapping with current system cursor
- removed dead code

--- a/src/styles/starMapUI.scss
+++ b/src/styles/starMapUI.scss
@@ -73,6 +73,19 @@
         background: var(--accent-color-light);
       }
 
+      &:disabled {
+        background: var(--disabled-color);
+        color: rgb(200, 200, 200);
+
+        &:hover {
+          background: var(--disabled-color);
+        }
+
+        &:active {
+          background: var(--disabled-color);
+        }
+      }
+
       &:active {
         background: var(--accent-color-dark);
       }
