--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,4 +11,5 @@ $backdrop-blur: blur(3px);
   --accent-color: #002b6a;
   --accent-color-dark: #001a3f;
   --accent-color-light: #003f9f;
+  --disabled-color: rgb(100, 100, 100);
 }
